# sequoia-python-client-sdk-async

./: CHANGELOG.md  LICENSE  README.md  make  mkdocs.yml  pyproject.toml  setup.cfg  test_list.py
.github/workflows/: ci_branch.yaml  ci_master.yaml
examples/: create.py  delete.py  retrieve.py  update.py
sequoia/: __init__.py  client.py  codecs.py  exceptions.py  request.py  response.py  types.py
tests/: conftest.py
tests/unit/sequoia/: conftest.py  test_client.py  test_codecs.py  test_request.py
